[package]
name = "shuttlings-cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["multipart"] }
base64 = "0.22.1"
html-escape = "0.2.13"
image = "0.25.5"
jiff = { version = "0.1.16", features = ["std"] }
num = "0.4.3"
rustemon = "4.0.0"
serde = "1.0.216"
serde_json = "1.0.134"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
thiserror = "2.0.9"
tokio = "1.28.2"
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = ["fs"] }
ulid = { version = "1.1.3", features = ["serde", "uuid"] }
uuid = "1.11.0"
